fix(VIconBtn): align text vertically

--- a/packages/vuetify/src/labs/VIconBtn/VIconBtn.scss
+++ b/packages/vuetify/src/labs/VIconBtn/VIconBtn.scss
@@ -16,6 +16,7 @@
       flex: none;
       font-size: $icon-btn-font-size;
       font-weight: $icon-btn-font-weight;
+      line-height: $icon-btn-line-height;
       height: #{$icon-btn-height};
       justify-content: center;
       outline: none;
